added one basic test for the ik library

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
    "devDependencies":{
       "grunt-contrib-jasmine":"~0.4.0",
       "grunt":"~0.4.0",
-      "grunt-contrib-jshint":"~0.2.0"
+      "grunt-contrib-jshint":"~0.2.0",
+      "grunt-template-jasmine-requirejs":"~0.1.1"
    },
    "keywords":[
 
