--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
       "npm":"1.1.x"
    },
    "dependencies":{
-      "johnny-five":"latest",
+      "johnny-five":"0.5.14",
       "socket.io":"0.9.11",
       "sylvester":"0.0.21"
    },
