Now compatible with a more recent version of johnny-five

--- a/software/package.json
+++ b/software/package.json
@@ -14,10 +14,9 @@
       "url":"https://github.com/hugs/tapsterbot.git"
    },
    "engines":{
-      "node":"0.8.x",
-      "npm":"1.1.x"
+      "node":"0.x.x"
    },
    "dependencies":{
-      "johnny-five":"0.5.14",
+      "johnny-five":"0.7.x"
    }
 }
